<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/currency_a"
        android:layout_width="140dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        android:hint="@string/euro"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonLeft"
        android:autofillHints="value of currency" />

    <ImageButton
        android:id="@+id/imageButtonLeft"
        android:layout_width="142dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#0000"
        android:contentDescription="@string/flag_of_a_country"
        android:onClick="currencySelectionLeft"
        android:scaleType="centerCrop"
        android:tag="euro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/europe_flag" />

    <TextView
        android:id="@+id/currency_b"
        android:layout_width="140dp"
        android:layout_height="62dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonRight" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="67dp"
        android:layout_height="90dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="switch_flags"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonRight"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/imageButtonLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swap_icon"
        android:contentDescription="@string/swap_icon" />

    <ImageButton
        android:id="@+id/imageButtonRight"
        android:layout_width="142dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#0000"
        android:onClick="currencySelectionRight"
        android:scaleType="centerCrop"
        android:tag="singapore_dollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/singapore_flag"
        android:contentDescription="@string/flag_at_the_right_side" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="286dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="settingsHandler"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning"
        app:layout_constraintVertical_bias="0.222" />

</android.support.constraint.ConstraintLayout>